Orbiting out of a camera drastically moves view when Auto Depth enabled #114714

Closed
opened 2023-11-10 16:49:24 +01:00 by Dvorakir · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34

Blender Version
Broken: version: 4.0.0 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-09 21:23, hash: c30c6b2d4e5b
Worked: 3.6.5

Short description of error
When orbiting from a camera view the view sometimes moves drastically.
It seems to be related to where the view was before entering the camera view, but there's always a slight offset to the view after orbiting out of a camera.
Only happens when Auto Depth is enabled in navigation preferences.

Exact steps for others to reproduce the error

  1. enable Auto Depth in navigation preferences
  2. open the attached blend file
  3. press MMB to orbit out of the camera view
    the view will fly way out of the camera
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34 **Blender Version** Broken: version: 4.0.0 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-09 21:23, hash: `c30c6b2d4e5b` Worked: 3.6.5 **Short description of error** When orbiting from a camera view the view sometimes moves drastically. It seems to be related to where the view was before entering the camera view, but there's always a slight offset to the view after orbiting out of a camera. Only happens when Auto Depth is enabled in navigation preferences. <video src="/attachments/b6c7871b-a9c9-4099-b307-596b00f3658e" controls></video> **Exact steps for others to reproduce the error** 1. enable Auto Depth in navigation preferences 2. open the attached blend file 3. press MMB to orbit out of the camera view the view will fly way out of the camera
Dvorakir added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-11-10 16:49:25 +01:00

Thank you for the report, @Dvorakir.

I can confirm.
Indeed it is a regression.
I'll look for where this problem was introduced

Thank you for the report, @Dvorakir. I can confirm. Indeed it is a regression. I'll look for where this problem was introduced
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-10 23:12:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114714
No description provided.